[package]
name = "hoppy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
gamercade_rs = "0.1.2"
hecs = "0.9.0"
parking_lot = "0.12.1"
glam = "0.21.3"

# Enable this for smaller build sizes, but longer compilation times
[profile.release]
lto = true